Fixed issue with improper column gap naming

--- a/src/Pages/About.module.css
+++ b/src/Pages/About.module.css
@@ -5,7 +5,7 @@
     padding-right: 10%;
     height: 100vh;
     width: 70%;
-    grid-column-gap: none;
+    column-gap: none;
     align-items: center;
     justify-items: center;
     color: white;
@@ -29,6 +29,7 @@
     flex-direction: column;
     align-items: center;
     background-image: url("https://img.freepik.com/free-vector/black-white-memphis-patterned-background_53876-114475.jpg");
+    background-size: cover;
     color: white;
     font-size: 2rem;
 }
